[package]
name = "lwext4_rust"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>"]
version = "0.2.0"
edition = "2018"
license = "GPL-2.0"
repository = "https://github.com/elliott10/lwext4_rust"
description = "lwext4 in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "lwext4"
build = "build.rs"

[features]
default = ["print", "std"]
print = ["printf-compat"]
std = []

[dependencies]
log = "0.4"
printf-compat = { git = "https://github.com/lights0123/printf-compat.git", rev = "5f5c9cc", default-features = false, optional = true }

# See: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[build-dependencies]
bindgen = "0.71"
